objects/pse__Forecast_Curve__c.object
<CustomObject>
    <customHelpPage>pse__ForecastCurveHelp</customHelpPage>
    <description>Contains one or more billing forecast curve details to measure varying anticipated revenue over a defined sequence of time (such as a quarter).</description>
    <fields>
        <fullName>pse__Lag__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The lag, in days, to apply before starting billing forecast curve calculations. The default value is 0.</description>
        <inlineHelpText>The lag, in days, to apply before starting forecast curve calculations. There is no default value.</inlineHelpText>
        <label>Lag</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Max_Forecast_Period__c</fullName>
        <formula>NULLVALUE(pse__Lag__c,0) + NULLVALUE(pse__Total_Curve_Period__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max Billing Forecast Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Total_Curve_Period__c</fullName>
        <label>Total Curve Period</label>
        <summarizedField>pse__Forecast_Curve_Detail__c.pse__Period__c</summarizedField>
        <summaryForeignKey>pse__Forecast_Curve_Detail__c.pse__Forecast_Curve__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Billing Forecast Curve</label>
    <listViews>
        <fullName>pse__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Billing Forecast Curve Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Forecast Curves</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>